--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,35 +11,17 @@
     android:layout_marginEnd="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginBottom="8dp"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="#FF0000"
-        app:layout_gravity="center_horizontal|center" />
-
     <android.support.v7.widget.GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="560dp"
-        android:layout_gravity="center"
-        android:layout_margin="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_weight="1"
+        android:layout_width="439dp"
+        android:layout_height="363dp"
         app:columnCount="3">
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:clickable="true"
             android:onClick="tileClicked"
             android:text=""
@@ -48,8 +30,8 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:clickable="true"
             android:onClick="tileClicked"
             android:text=""
@@ -58,8 +40,8 @@
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:clickable="true"
             android:onClick="tileClicked"
             android:text=""
@@ -68,8 +50,8 @@
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:clickable="true"
             android:onClick="tileClicked"
             android:text=""
@@ -78,8 +60,8 @@
 
         <Button
             android:id="@+id/button5"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:clickable="true"
             android:onClick="tileClicked"
             android:text=""
@@ -88,8 +70,8 @@
 
         <Button
             android:id="@+id/button6"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:clickable="true"
             android:onClick="tileClicked"
             android:text=""
@@ -98,8 +80,8 @@
 
         <Button
             android:id="@+id/button7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:clickable="true"
             android:onClick="tileClicked"
             android:text=""
@@ -108,8 +90,8 @@
 
         <Button
             android:id="@+id/button8"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:clickable="true"
             android:onClick="tileClicked"
             android:text=""
@@ -118,8 +100,8 @@
 
         <Button
             android:id="@+id/button9"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:clickable="true"
             android:onClick="tileClicked"
             android:text=""
@@ -136,4 +118,13 @@
         android:layout_margin="8dp"
         android:onClick="resetClicked"
         android:text="Reset" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="#FF0000"
+        app:layout_gravity="center_vertical" />
+
 </LinearLayout>
